Fix: navbar item icon's width flickering.

--- a/sources/js/components/Header/components/Navbar/Navbar.module.css
+++ b/sources/js/components/Header/components/Navbar/Navbar.module.css
@@ -95,6 +95,7 @@
 
 .navbar-item-icon,
 .navbar-item-loading-icon {
+    width: 12px;
     height: 1em;
     margin-right: 6px;
 }
